objects/Relationship_Type__c.object
<CustomObject>
    <description>This object holds the definitions of the different types of relationship that can be established between two Contacts.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Employee_User_Record__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Contact.Employee_User_Record__r.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Relationship Types</relationshipLabel>
        <relationshipName>Relationship_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Counter_ID__c</fullName>
        <displayFormat>RT{0}</displayFormat>
        <label>Counter ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Name_When_From__c</fullName>
        <inlineHelpText>What do you call the relationship from the perspective of each party? For example, in a &quot;Management&quot; relationship, the From is &quot;Manager&quot; and the To is &quot;Staff&quot;.</inlineHelpText>
        <label>Name When From</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_When_To__c</fullName>
        <inlineHelpText>What do you call the relationship from the perspective of each party? For example, in a &quot;Management&quot; relationship, the From is &quot;Manager&quot; and the To is &quot;Staff&quot;.</inlineHelpText>
        <label>Name When To</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Relationship Type</label>
    <listViews>
        <fullName>Active_Relationship_Types</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Name_When_From__c</columns>
        <columns>Name_When_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Relationship Types</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Relationship Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationship Types</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>